Update variable name

--- a/app/assets/sass/_variables.scss
+++ b/app/assets/sass/_variables.scss
@@ -22,7 +22,7 @@ $heading-line-height: 1.2;
 
 /* Colours and transparency
 ---------------------------------------------------------------------- */
-$lh-page-blue: #F2F8FD;
+$tel-page-blue: #F2F8FD;
 
 $alpha: 0.95;
 $spectre: transparent;
