Update scss paths and add _progress.scss

--- a/app/assets/sass/main.scss
+++ b/app/assets/sass/main.scss
@@ -6,24 +6,31 @@
 @import 'components/related-nav';
 
 ///////////////////////////////////////////
-// Prototype custome css
+// Prototype custom css
 ///////////////////////////////////////////
 
 @import 'variables';
 @import 'functions';
 @import 'mixins';
-@import 'global';
 
-@import 'components/utitlties';
-@import 'components/form-elements';
-@import 'components/picture';
-@import 'components/featured-media';
-@import 'components/search';
-@import 'components/in-page-nav';
+
 @import 'components/certificate';
+@import 'components/featured-media';
+@import 'components/form-elements';
+@import 'components/in-page-nav';
+@import 'components/learning-log';
+@import 'components/picture';
+@import 'components/progress';
+@import 'components/quick-filters';
+@import 'components/search';
 @import 'components/task-list';
+@import 'components/utilities';
 
+
+// Overrides
+@import 'components/nhsuk-overrides/expander';
 @import 'components/nhsuk-overrides/summary-list';
+@import 'components/nhsuk-overrides/tag';
 
 ///////////////////////////////////////////
 // DLS css
