Update date content to remove extraniouse info and add TODOs to pages

--- a/app/views/prototypes/paper-transfer-process/_dls-parts/about-iv-therapy/index.html
+++ b/app/views/prototypes/paper-transfer-process/_dls-parts/about-iv-therapy/index.html
@@ -11,6 +11,8 @@
 <div class="nhsuk-width-container">
   {# <link rel="stylesheet" href="https://www.dls.nhs.uk/v2/css/learningPortal/current.css"> #}
 
+  {# TODO - Add confirmation page after final submission #}
+
   <h1>IV Therapy Passport</h1>
 
   <div class="nhsuk-grid-row">
@@ -103,9 +105,6 @@
           <div class="nhsuk-card__description">
             <ul>
               <li>Allan King, Educator/Manager (##NHSE Demo Centre##)</li>
-              <li>Anna Athanasopoulou, Educator/Manager (##NHSE Demo Centre##)</li>
-              <li>Claire Wroe, Assessor (##NHSE Demo Centre##)</li>
-              <li style="list-style-type: none">+1 more</li>
             </ul>
             <a class="nhsuk-button nhsuk-button--secondary" href="#">Manage supervisors</a>
           </div>
