--- a/app/views/prototypes/paper-transfer-process/additional-proficiencies/index.html
+++ b/app/views/prototypes/paper-transfer-process/additional-proficiencies/index.html
@@ -53,6 +53,7 @@
             }) }}
 
             {# TODO - capture No if sleceted #}
+            {# TODO - No needs to change state in task to a completion #}
           </div>
 
           <div class="content-group">
