--- a/app/views/prototypes/paper-transfer-process/have-you-completed-a-paper-assessment/index.html
+++ b/app/views/prototypes/paper-transfer-process/have-you-completed-a-paper-assessment/index.html
@@ -36,6 +36,7 @@
         </div>
 
         <div class="content-group">
+          {# TODO - Make no work so we have visual confirmaiton #}
           {{ radios({
             idPrefix: "example",
             name: "example",
