Add Admin journey and include previously missed exander scss"

--- a/app/views/index.html
+++ b/app/views/index.html
@@ -80,6 +80,16 @@
               "description": ""
             }) }}
           </li>
+          {# prototypes/paper-transfer-process/admin/supervisor-dashboard/index.html #}
+          <li class="nhsuk-grid-column-one-third nhsuk-card-group__item">
+            {{ card({
+              "href": "prototypes/paper-transfer-process/admin/supervisor-dashboard",
+              "clickable": "true",
+              "heading": "Paper transfer journey - Admin",
+              "headingClasses": "nhsuk-heading-s",
+              "description": ""
+            }) }}
+          </li>
           <li class="nhsuk-grid-column-one-third nhsuk-card-group__item">
             {{ card({
               "href": "/register-delegates",
