Update progress cards and root final page

--- a/app/assets/sass/components/_progress.scss
+++ b/app/assets/sass/components/_progress.scss
@@ -1,64 +1,43 @@
-.progress-pips {
-  &__details {
-    margin: 12px 0;
-  }
-
-  &__pips-wrapper {
-    display: flex;
-    align-items: center;
-    // justify-content: center;
-    width: 100%;
-    flex-direction: row;
-  }
-
-  &__pip {
-    width: 8px;
-    height: 8px;
-    margin-right: 6px;
-    border-radius: 100%;
-    border: 1px solid $color_nhsuk-green;
-  }
-}
-
 .progress {
-  &__box {
-    margin-bottom: nhsuk-spacing(5);
-    padding: nhsuk-spacing(5);
-    border-radius: $global-radius;
-    border: 1px solid $nhsuk-border-color;
+  margin-bottom: nhsuk-spacing(5);
+  padding: nhsuk-spacing(5);
+  border-radius: $global-radius;
+  border: 1px solid $nhsuk-border-color;
+  background-color: $color_nhsuk-white;
 
-    & > *:last-child {
-      margin-bottom: 0 !important;
+  &--notification {
+    background-color: $tel-page-blue;
+  }
+
+  &--complete {
+    @include light-text;
+    background-color: $color_nhsuk-blue;
+  }
+
+  & > *:last-child {
+    margin-bottom: 0 !important;
+  }
+
+  &__header {
+    @include mq($from: tablet) {
+      display: flex;
+      flex-direction: row;
+      justify-content: space-between;
+      flex-wrap: wrap
     }
-
-    &--notification {
-      background-color: $tel-page-blue;
-    }
   }
 
-  &__title {
-    @include adjust-heading(24);
+  &__header-title {
+    @include adjust-heading(24); // this needs to match the heading size so if this used a h2 instead of a h3 this may need to be defined as a modifier
   }
 
-  &__content {
-
-  }
-
-  &__details-group {
-    display: flex;
-    align-items: center;
-    // justify-content: center;
-    width: 100%;
-    flex-direction: row;
-  }
-
-  &__details-title,
-  &__details-description {
+  &__header-date {
     @extend .nhsuk-u-font-size-16;
-
-    font-weight: 600;
-    color: $nhsuk-text-color;
   }
+
+  // &__content {}
+
+  // &__progress-summary {}
 
   &__progress-bar {
     width: 100%;
@@ -69,8 +48,39 @@
     border: 1px solid $color_nhsuk-green;
   }
 
-  // &__action {
-  //   margin-bottom: nhsuk-spacing(0);
-  // }
+  // &__action {}
+}
 
+.progress-summary {
+  max-width: 100%;
+
+  &__group {
+    display: flex;
+    align-items: center;
+    width: 100%;
+    flex-direction: row;
+  }
+
+  &__title,
+  &__description {
+    @extend .nhsuk-u-font-size-16;
+
+    font-weight: 600;
+    color: $nhsuk-text-color;
+  }
+}
+
+.progress-pips {
+  display: flex;
+  align-items: center;
+  width: 100%;
+  flex-direction: row;
+
+  &__pip {
+    width: 8px;
+    height: 8px;
+    margin-right: 6px;
+    border-radius: 100%;
+    border: 1px solid $color_nhsuk-green;
+  }
 }
