--- a/app/views/prototypes/paper-transfer-process/admin/sign-decleration/index.html
+++ b/app/views/prototypes/paper-transfer-process/admin/sign-decleration/index.html
@@ -55,11 +55,11 @@
               name: "approval",
               items: [
                 {
-                  value: "approve",
+                  value: "approved",
                   text: "I approve the transfer of the paper assessment sign-off"
                 },
                 {
-                  value: "reject",
+                  value: "rejected",
                   text: "Reject paper assessment sign-off request",
                   conditional: {
                     html: ReasonHtml
