Update admin index and card styling to fix component alignment and page layout

--- a/app/assets/sass/main.scss
+++ b/app/assets/sass/main.scss
@@ -28,6 +28,7 @@
 
 
 // Overrides
+@import 'components/nhsuk-overrides/card';
 @import 'components/nhsuk-overrides/expander';
 @import 'components/nhsuk-overrides/summary-list';
 @import 'components/nhsuk-overrides/tag';
