--- a/app/views/prototypes/paper-transfer-process/admin/supervisor-dashboard/index.html
+++ b/app/views/prototypes/paper-transfer-process/admin/supervisor-dashboard/index.html
@@ -8,6 +8,13 @@
 {% endblock %}
 
 {% block content %}
+{# TODO:
+  Improvment - two colums at dsktop
+  Improvment - re-style todo list to be a contained card and have it define function first the description
+  Improvment - My staff is a single link. Understand if this si meant to be more and re-design based on outcome
+  Improvment - Remove contact info or move into expander
+#}
+
 <link rel="stylesheet" href="https://www.dls.nhs.uk/v2/css/frameworks/frameworksShared.css?v=678_XEjDIwvLH2W8Elbf7ULn6xKeUfR-QwtRL4vz2pM">
 
  <div class="nhsuk-width-container">
