Scope learner journie under folder

--- a/app/views/index.html
+++ b/app/views/index.html
@@ -73,9 +73,9 @@
           {# /paper-transfer/have-you-completed-a-paper-assessment #}
           <li class="nhsuk-grid-column-one-third nhsuk-card-group__item">
             {{ card({
-              "href": "/paper-transfer/_dls-parts",
+              "href": "/paper-transfer/learner/_dls-parts",
               "clickable": "true",
-              "heading": "Paper transfer journey",
+              "heading": "Paper transfer journey - Learner",
               "headingClasses": "nhsuk-heading-s",
               "description": ""
             }) }}
@@ -83,7 +83,7 @@
           {# prototypes/paper-transfer-process/admin/supervisor-dashboard/index.html #}
           <li class="nhsuk-grid-column-one-third nhsuk-card-group__item">
             {{ card({
-              "href": "prototypes/paper-transfer-process/admin/supervisor-dashboard",
+              "href": "/paper-transfer/admin/supervisor-dashboard",
               "clickable": "true",
               "heading": "Paper transfer journey - Admin",
               "headingClasses": "nhsuk-heading-s",
