--- a/app/views/prototypes/paper-transfer-process/learner/additional-proficiencies/add-proficiencies-iv-therapy.html
+++ b/app/views/prototypes/paper-transfer-process/learner/additional-proficiencies/add-proficiencies-iv-therapy.html
@@ -12,7 +12,7 @@
     <div class="nhsuk-grid-row">
       <div class="nhsuk-grid-column-full">
         {{ backLink({
-          href: "/paper-transfer/additional-proficiencies",
+          href: "/paper-transfer/learner/additional-proficiencies",
           text: "Go back"
         }) }}
 
@@ -26,7 +26,7 @@
 
         <h2>Additional proficiencies</h2>
 
-        <form action="/paper-transfer" method="post" class="form">
+        <form action=/paper-transfer/learner/ method="post" class="form">
           <div class="content-group">
             <h3>Methods of preparation</h3>
             {{ checkboxes({
