--- a/app/views/prototypes/paper-transfer-process/learner/upload/index.html
+++ b/app/views/prototypes/paper-transfer-process/learner/upload/index.html
@@ -47,7 +47,7 @@
           }) }}
       </div>
 
-      <form action="/paper-transfer" method="post" class="form">
+      <form action=/paper-transfer/learner/ method="post" class="form">
         <div class="content-group">
           <h2>Upload file</h2>
 
