--- a/app/views/prototypes/paper-transfer-process/admin/review-and-submit/index.html
+++ b/app/views/prototypes/paper-transfer-process/admin/review-and-submit/index.html
@@ -12,7 +12,7 @@
     <div class="nhsuk-grid-row">
       <div class="nhsuk-grid-column-full">
         {{ backLink({
-          href: "/paper-transfer",
+          href: "/paper-transfer/learner/",
           text: "Go back"
         }) }}
 
