--- a/app/views/prototypes/paper-transfer-process/learner/paper-assessment-information/index.html
+++ b/app/views/prototypes/paper-transfer-process/learner/paper-assessment-information/index.html
@@ -12,13 +12,13 @@
     <div class="nhsuk-grid-row">
       <div class="nhsuk-grid-column-full">
         {{ backLink({
-          href: "/paper-transfer",
+          href: "/paper-transfer/learner/",
           text: "Go back"
         }) }}
 
         <h1>Provide information from paper assessment</h1>
 
-        <form action="/paper-transfer" method="post" class="form">
+        <form action=/paper-transfer/learner/ method="post" class="form">
           <div class="nhsuk-form-group">
 
             {# CONTENT - Ask Angelina to discsuss this content with Jacqueline and Julie - this infprmatio needs to be generic #}
