--- a/app/views/prototypes/paper-transfer-process/learner/sign-decleration/index.html
+++ b/app/views/prototypes/paper-transfer-process/learner/sign-decleration/index.html
@@ -12,7 +12,7 @@
     <div class="nhsuk-grid-row">
       <div class="nhsuk-grid-column-full">
         {{ backLink({
-          href: "/paper-transfer",
+          href: "/paper-transfer/learner/",
           text: "Go back"
         }) }}
 
@@ -25,7 +25,7 @@
           <p>I commit to following organisational practice guidelines and policies.</p>
         </div>
 
-        <form action="/paper-transfer" method="post" class="form">
+        <form action=/paper-transfer/learner/ method="post" class="form">
           <div class="content-group">
             {{ checkboxes({
               idPrefix: "example",
